# iptvchecker

./: .gitignore  README.md  pyproject.toml  test.m3u
iptvchecker/: __init__.py  __main__.py  checker.py
