[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iptvchecker"
version = "1.0.0"
authors = [
  { name = "IPTV Checker" },
]
description = "A tool to verify IPTV M3U playlists"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "m3u8",
]

[project.scripts]
iptvchecker = "iptvchecker.__main__:main"
